js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-empty-str-is-valid-assign-expr.js
async
function
f
(
)
{
import
(
'
'
)
;
}
reportCompare
(
0
0
)
;
