js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-import-defer-no-new-call-expression.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
new
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
